--- a/Frontend/src/app/property/property-list/property-list.component.html
+++ b/Frontend/src/app/property/property-list/property-list.component.html
@@ -1,7 +1,9 @@
 <div class="row">
     @for (property of Properties; track $index) {
-        <div class="shadow-lg col-sm-4 p-3">
-            <app-property-card [property]="property"></app-property-card>
+        <div class="col-sm-4">
+            <div class="shadow-lg p-3 mb-4">
+                <app-property-card [property]="property"></app-property-card>
+            </div>
         </div>
     }
 </div>
