--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -1,4 +1,51 @@
-<p>
-  add-property works!
-  <button class="btn btn-primary" (click)="onBack()">Back</button>
-</p>
+<div class="card">
+  <div class="card-header">
+    Add New Property
+  </div>
+  <div class="card-body">
+    <form (ngSubmit)='onSubmit()' #Form="ngForm">
+      <div class="mb-3">
+        <input type="radio" id="sell" value="1" name="SellRent" required [ngModel]="SellRent">
+        <label class="m-2">Sell</label>
+
+        <input type="radio" id="rent" value="2" name="SellRent" required [ngModel]="SellRent" >
+        <label class="m-2">Rent</label>
+      </div>
+
+      <div class="mb-3">
+        <label  for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" #propName="ngModel" ngModel name="Name" required>
+        @if (!propName.valid && propName.touched) {
+          <span class="error-block">
+            Please Provide a Property Name!
+          </span>
+        }
+      </div>
+
+      <div class="mb-3">
+        <label  for="type" class="form-label">Type</label>
+        <input type="text" class="form-control" #propType="ngModel" ngModel name="Type" required="">
+        @if (!propType.valid && propType.touched) {
+          <span class="error-block">
+            Please Provide a Property Type!
+          </span>
+        }
+      </div>
+
+      <div class="mb-3">
+        <label  for="price" class="form-label">Price</label>
+        <input type="number" class="form-control" #propPrice="ngModel" ngModel name="Price" required="">
+        @if (!propPrice.valid && propPrice.touched) {
+          <span class="error-block">
+            Please Provide a Property Price!
+          </span>
+        }
+      </div>
+
+      <div class="form-group col-12">
+        <button [disabled]="!Form.valid" type="submit" class="btn btn-primary me-2">Save</button>
+        <button type="reset" class="btn btn-primary">Cancel</button>
+      </div>
+    </form>
+  </div>
+</div>
