Reactive forms to register a user, Added register/login componenets, Validation, Custome validation & validation messges.

--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -4,13 +4,13 @@
   </div>
   <div class="card-body">
     <form (ngSubmit)='onSubmit()' #Form="ngForm">
-      <div class="mb-3">
+      <!-- <div class="mb-3">
         <input type="radio" id="sell" value="1" name="SellRent" required [ngModel]="SellRent">
         <label class="m-2">Sell</label>
 
         <input type="radio" id="rent" value="2" name="SellRent" required [ngModel]="SellRent" >
         <label class="m-2">Rent</label>
-      </div>
+      </div> -->
 
       <div class="mb-3">
         <label  for="name" class="form-label">Name</label>
