--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -1,51 +1,232 @@
-<div class="card">
-  <div class="card-header">
-    Add New Property
+<div class="row">
+  <div class="col-8">
+    <div class="card">
+      <div class="card-header">
+        <h3>List Your Property</h3>
+      </div>
+      <div class="card-body">
+        <form (ngSubmit)='onSubmit()' #Form="ngForm">
+          <div>
+            <tabset #formsTab>
+              <tab heading="Basic Info">
+                <div class="mt-3 container">
+                  <div class="mb-3">
+                    <p class="form-label">I Want to</p>
+                    <div class="mb-3 btn-group" btnRadioGroup>
+                      <label class="btn btn-outline-primary me-2" btnRadio=1 role="button" name="SellRent">Sell</label>
+                      <label class="btn btn-outline-primary" btnRadio=2 role="button" name="SellRent">Rent</label>
+                    </div>
+                  </div>
+
+                  <div class="mb-3">
+                    <p class="form-label">BHK</p>
+                    <div class="mb-3 btn-group" btnRadioGroup>
+                      @for (bhk of [1,2,3,4]; track $index) {
+                        <label class="btn btn-outline-primary me-2" [btnRadio]="bhk" role="button" name="bhk">{{bhk}}</label>
+                      }
+                    </div>
+                  </div>
+
+                  <!-- <div class="mb-3">
+                    <label  for="type" class="form-label">Type</label>
+                    <input type="text" class="form-control" #propType="ngModel" ngModel name="Type" required="">
+                    @if (!propType.valid && propType.touched) {
+                      <span class="error-block">
+                        Please Provide a Property Type!
+                      </span>
+                    }
+                  </div> -->
+
+                  <div class="mb-3">
+                    <p class="form-label">Property Type</p>
+                    <div class="mb-3 btn-group" btnRadioGroup name="propType" [(ngModel)]="propertyView.Type">
+                      @for (ptype of propertyTypes; track $index) {
+                        <label class="btn btn-outline-primary me-2" [btnRadio]="ptype" role="button" name="pType">{{ptype}}</label>
+                      }
+                    </div>
+                  </div>
+
+                  <div class="mb-3">
+                    <p class="form-label">Furnish Type</p>
+                    <div class="mb-3 btn-group" btnRadioGroup>
+                      @for (ftype of furnishTypes; track $index) {
+                        <label class="btn btn-outline-primary me-2" [btnRadio]="ftype" role="button" name="fType">{{ftype}}</label>
+                      }
+                    </div>
+                  </div>
+
+                  <div class="mb-3">
+                    <label  for="name" class="form-label">in Building/Society/Project</label>
+                    <input type="text" class="form-control" #propName="ngModel" ngModel name="Name" required [(ngModel)]="propertyView.Name">
+                    @if (!propName.valid && propName.touched) {
+                      <span class="error-block">
+                        Please Provide a Property Name!
+                      </span>
+                    }
+                  </div>
+
+                  <div class="mb-3">
+                    <label  for="price" class="form-label">City</label>
+                    <input type="number" class="form-control" required="">
+                  </div>
+
+                  <div class="mb-3">
+                    <button type="button" class="btn btn-primary w-100" (click)="selectTab(1)">Next</button>
+                  </div>
+                </div>
+              </tab>
+
+              <tab heading="Pricing & Area">
+                <div class="mt-3 container">
+                  <div class="mb-3">
+                    <label class="form-label">Price (INR)</label>
+                    <input type="text" class="form-control" name="price" [(ngModel)]="propertyView.Price">
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Security (INR)</label>
+                    <input type="text" class="form-control">
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Maintenance (INR)</label>
+                    <input type="text" class="form-control">
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Built Area (Sqr Feet)</label>
+                    <input type="text" class="form-control">
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Carpet Area (Sqr Feet)</label>
+                    <input type="text" class="form-control">
+                  </div>
+
+                  <div class="mb-3">
+                    <button type="button" class="btn btn-primary w-100" (click)="selectTab(2)">Next</button>
+                  </div>
+                  <div class="mb-3">
+                    <button type="button" class="btn btn-primary w-100" (click)="selectTab(0)">Back</button>
+                  </div>
+                </div>
+              </tab>
+
+              <tab heading="Address">
+                <div class="mt-3 container">
+                  <div class="mb-3">
+                    <label class="form-label">Floor</label>
+                    <input type="text" class="form-control">
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Total Floor</label>
+                    <input type="text" class="form-control">
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Address</label>
+                    <input type="text" class="form-control">
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Landmark</label>
+                    <input type="text" class="form-control">
+                  </div>
+
+                  <div class="mb-3">
+                    <button type="button" class="btn btn-primary w-100" (click)="selectTab(3)">Next</button>
+                  </div>
+                  <div class="mb-3">
+                    <button type="button" class="btn btn-primary w-100" (click)="selectTab(1)">Back</button>
+                  </div>
+                </div>
+              </tab>
+
+              <tab heading="Other Details">
+                <div class="mt-3 container">
+                  <div class="mb-3">
+                    <p class="form-label">Ready to Move</p>
+                    <div class="mb-3 btn-group" btnRadioGroup>
+                      <label class="btn btn-outline-primary me-2" btnRadio=1 role="button" name="moveIn">Yes</label>
+                      <label class="btn btn-outline-primary" btnRadio=2 role="button" name="moveIn">No</label>
+                    </div>
+                  </div>
+
+                  <div class="mb-3 col-2">
+                    <label class="form-label">Possession/Avaialble From</label>
+                    <input type="text" placeholder="DD-MM-YYYY" class="form-control" bsDatepicker [bsConfig]="{containerClass: 'theme-dark-blue', dateInputFormat: 'DD-MM-YYYY'}">
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Age of Property</label>
+                    <input type="text" class="form-control">
+                  </div>
+
+                  <div class="mb-3">
+                    <p class="form-label">Gated Community</p>
+                    <div class="mb-3 btn-group" btnRadioGroup>
+                      <label class="btn btn-outline-primary me-2" btnRadio=1 role="button" name="Gated">Yes</label>
+                      <label class="btn btn-outline-primary" btnRadio=2 role="button" name="Gated">No</label>
+                    </div>
+                  </div>
+
+                  <div class="mb-3">
+                    <p class="form-label">Main Entrance</p>
+                    <div class="mb-3 btn-group" btnRadioGroup>
+                      @for (face of propertyFacing; track $index) {
+                        <label class="btn btn-outline-primary me-2" [btnRadio]="face" role="button" name="face">{{face}}</label>
+                      }
+                    </div>
+                  </div>
+
+                  <div class="mb-3">
+                    <label class="form-label">Description</label>
+                    <textarea type="text" class="form-control" rows="6"></textarea>
+                  </div>
+
+                  <div class="mb-3">
+                    <button type="button" class="btn btn-primary w-100" (click)="selectTab(4)">Next</button>
+                  </div>
+                  <div class="mb-3">
+                    <button type="button" class="btn btn-primary w-100" (click)="selectTab(2)">Back</button>
+                  </div>
+                </div>
+              </tab>
+
+              <tab heading="Photo Upload">
+                <div class="mt-3 container">
+                  <div class="mb-3">
+                    <div class="photo-control">
+                        <button class="mt-5" type="button">Upload</button> <br>
+                        This is under construction
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <button type="button" class="btn btn-primary w-100" (click)="selectTab(3)">Back</button>
+                  </div>
+                  <div class="mb-3">
+                    <button type="reset" class="btn btn-primary w-100">Cancel</button>
+                  </div>
+                  <div class="mb-3">
+                    <button type="submit" class="btn btn-primary w-100">Submit</button>
+                  </div>
+                </div>
+              </tab>
+            </tabset>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
-  <div class="card-body">
-    <form (ngSubmit)='onSubmit()' #Form="ngForm">
-      <!-- <div class="mb-3">
-        <input type="radio" id="sell" value="1" name="SellRent" required [ngModel]="SellRent">
-        <label class="m-2">Sell</label>
-
-        <input type="radio" id="rent" value="2" name="SellRent" required [ngModel]="SellRent" >
-        <label class="m-2">Rent</label>
-      </div> -->
-
-      <div class="mb-3">
-        <label  for="name" class="form-label">Name</label>
-        <input type="text" class="form-control" #propName="ngModel" ngModel name="Name" required>
-        @if (!propName.valid && propName.touched) {
-          <span class="error-block">
-            Please Provide a Property Name!
-          </span>
-        }
+  <div class="col-4">
+    <div class="card">
+      <div class="card-header">
+        <h3>Your Property Preview</h3>
       </div>
-
-      <div class="mb-3">
-        <label  for="type" class="form-label">Type</label>
-        <input type="text" class="form-control" #propType="ngModel" ngModel name="Type" required="">
-        @if (!propType.valid && propType.touched) {
-          <span class="error-block">
-            Please Provide a Property Type!
-          </span>
-        }
+      <div class="card-body">
+        <app-property-card [property]="propertyView"></app-property-card>
       </div>
-
-      <div class="mb-3">
-        <label  for="price" class="form-label">Price</label>
-        <input type="number" class="form-control" #propPrice="ngModel" ngModel name="Price" required="">
-        @if (!propPrice.valid && propPrice.touched) {
-          <span class="error-block">
-            Please Provide a Property Price!
-          </span>
-        }
-      </div>
-
-      <div class="form-group col-12">
-        <button [disabled]="!Form.valid" type="submit" class="btn btn-primary me-2">Save</button>
-        <button type="reset" class="btn btn-primary">Cancel</button>
-      </div>
-    </form>
+    </div>
   </div>
 </div>
